--- a/vignettes/rmddocuhelper_dev.Rmd
+++ b/vignettes/rmddocuhelper_dev.Rmd
@@ -18,8 +18,10 @@ r6obj_docstat$setProject(psProject = "rmddochelper")
 # r6obj_docstat$setStatus(psStatus = "Extended Introduction")
 # r6obj_docstat$setVersion(psVersion = "0.0.903")
 # r6obj_docstat$setStatus(psStatus = "Describe replacement function")
-r6obj_docstat$setVersion(psVersion = "0.0.904")
-r6obj_docstat$setStatus(psStatus = "Description of document status")
+# r6obj_docstat$setVersion(psVersion = "0.0.904")
+# r6obj_docstat$setStatus(psStatus = "Description of document status")
+r6obj_docstat$setVersion(psVersion = "0.0.905")
+r6obj_docstat$setStatus(psStatus = "Minor improvements on structure and description")
 
 r6obj_docstat$include_doc_stat()
 ```
@@ -30,7 +32,11 @@ This document is a collection of ideas, plans and specifications that are import
 
 
 ## Introduction
-Creating documents is easy using tools like `Rstudio`, `rmarkdown`, `knitr` and `pandoc`. The source of such a document is written in a special version of markdown called `rmarkdown`. In addition to ordinary markdown, `rmarkdown` allows for direct inclusion of `R`-statements in the document markup source. The `knitr` package is used to convert the rmarkdown sources into ordinary markdown source file. During that conversion all `R`-statements are evaluated and evaluation results are collected and included into the markdown document. The transformation of `rmarkdown` sources to markdown by `knitr` is analogous to what `Sweave` does with `LaTeX` source files. The advantage of using `knitr` and `rmarkdown` is that we have to use considerably less markup instructions compared to `Sweave` and `LaTeX`. On the other hand, if we really need the expressive power of `LaTeX`, we can include chunks of `LaTeX` statements which are automatically converted by the latter used conversion tool called `pandoc`. The document conversion tool `pandoc` converts the produced markdown document into many different output formats, such as HTML or PDF. Although, pandoc is a very powerful conversion tool, there are limits when trying to convert `LaTeX` sources into output formats such as `docx`. One example of such a restriction is when graphics are included in markdown files using the `LaTeX` statement `\includegraphics`, those diagrams will not show up in a `docx`-formatted document that is produced by pandoc. In that case one has to stick to the markdown syntax for including graphics.  
+Creating documents is easy using tools like `Rstudio`, `rmarkdown`, `knitr` and `pandoc`. The source of such a document is written in a special version of markdown called `rmarkdown`. In addition to ordinary markdown, `rmarkdown` allows for direct inclusion of `R`-statements in the document markup source. The `knitr` package is used to convert the rmarkdown sources into ordinary markdown source file. During that conversion all `R`-statements are evaluated and evaluation results are collected and included into the markdown document. 
+
+The transformation of `rmarkdown` sources to markdown by `knitr` is analogous to what `Sweave` does with `LaTeX` source files. The advantage of using `knitr` and `rmarkdown` is that we have to use considerably less markup instructions compared to `Sweave` and `LaTeX`. On the other hand, if we really need the expressive power of `LaTeX`, we can include chunks of `LaTeX` statements which are automatically converted by the latter used conversion tool called `pandoc`. 
+
+The document conversion tool `pandoc` converts the produced markdown document into many different output formats, such as HTML or PDF. Although, pandoc is a very powerful conversion tool, there are limits when trying to convert `LaTeX` sources into output formats such as `docx`. One example of such a restriction is when graphics are included in markdown files using the `LaTeX` statement `\includegraphics`, those diagrams will not show up in a `docx`-formatted document that is produced by pandoc. In that case one has to stick to the markdown syntax for including graphics.  
 
 
 ## Objective
@@ -84,17 +90,32 @@ gsub_templ_pattern <- function(ps_docu_template, pl_repl_info){
 }
 ```
 
-The replacement of the placeholders is done in function `gsub_templ_pattern()`. In that function, we loop over the names of the replacement list and replace occurrences of the placeholders with the associated replacement list values. The names in the replacement list are converted to placeholders using the helper-function `get_repl_tag()`. The result after the replacement is shown below.
+The replacement of the placeholders is done in function `gsub_templ_pattern()`. That function takes two arguments 
+
+1. the document template as a string and 
+2. the association of placeholders to replacement values as a list.
+
+The result corresponds to the initial version of the document where all placeholders are replaced by their corresponding values. Placeholders are replaced by a loop over the names of the replacement list. Each name is converted to a placeholder using the helper function `get_repl_tag()`. The function `gsub()` replaces the placeholders in the template string with the appropriate replacement values.
+
+The result after the replacement is shown below.
 
 ```{r OutputAfterReplacement}
 ### # output result of replacement
 cat("```\n", gsub_templ_pattern(ps_docu_template = docu_template, pl_repl_info = repl_info), "\n```\n")
 ```
 
-# Document status
+## Document status
 The status of a document is shown in a separate section that contains one table. That table contains information about the version of the document, the date, the author, the status and the project to which this document is associated to. This information is important mostly for internal use. Whenever a document is published or sent to external institutions, that information should most likely be hidden in the final output. Hence a useful feature is the possibility to easily be able to hide the whole section on the document status.
 
 In this package `rmddocuhelper`, the document status is implemented in a R6 class called `R6ClassDocuStatus`. This class has fields to store the version, the data, the author, the status and the project. Apart from the getter and setter methods of the fields, there is only one public method that produces the table containing the document status. The resulting output of this method is shown at the beginning of this document.
 
 
-# Abreviation list
+## Abbreviation table
+Abbreviations are convenient to use for authors because it saves them writing long terms all the time. For readers abbreviations can be a problem, if their meaning is not explained in the text. One way of solving this problem is to put somewhere in the text a table that explains all abbreviations. 
+
+Setting up the table of abbreviations manually is tedious and error-prone. Hence we are looking for a way to generate the table of abbreviations automatically. Before the table of abbreviations can be generated, we have to collect all the abbreviations together with their meanings in the text. This information is used to construct a dataframe which is then shown as table of abbreviations. Because we want to be able to place the table of abbreviations in any position in the text, we have to collect the information about all abbreviations and their meanings in a separate scan over the source text. Since we want to hide implementation details from the user, we choose to use R6 classes and methods to implement this functionality. 
+
+
+
+
+
