--- a/vignettes/rmddocuhelper_dev/rmddocuhelper_dev.Rmd
+++ b/vignettes/rmddocuhelper_dev/rmddocuhelper_dev.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "rmddocuhelper Package Development"
-author: "Peter von Rohr"
-date: "`r Sys.Date()`"
+title: rmddocuhelper Package Development
+author: Peter von Rohr
+date: `r Sys.Date()`
 output: rmarkdown::html_vignette
 ---
 
@@ -139,6 +139,13 @@ rmddochelper::insertOdgAsPng(psOdgFileStem = "RandomScreenShot2")
 ```
 
 When knitting the rmarkdown file to pdf, it makes more sense to use the function `insertOdgAsPdf()`.
+
+In many documents, graphics to be inserted are based on screenshots or other images which are not directly produced by one of the R-graphics systems. Then it would be convenient to have the command to include the graphic directly inserted into the Rmarkdown source file.
+
+```{r AutoIncludeGraphic}
+getwd()
+list.files(pattern = "Rmd$")
+```
 
 
 
