Fixed changing of dates when updating old document status entries

--- a/vignettes/rmddocuhelper_dev/rmddocuhelper_dev.Rmd
+++ b/vignettes/rmddocuhelper_dev/rmddocuhelper_dev.Rmd
@@ -170,7 +170,7 @@ In the current version, if we start by including a chunk with the label that is 
 ## Package global options
 In package `knitr` you have the possiblities to specify package global options. These options are stored in 
 
-```{r KnitrOptsKnit}
+```{r KnitrOptsKnit, results='hide'}
 knitr::opts_knit
 ```
 
